Fix minor spacing issues

--- a/root/static/styles/release-editor.css
+++ b/root/static/styles/release-editor.css
@@ -271,7 +271,6 @@ table.medium.tbl td.guesscase a { color: #d3d3d3; font-weight: bolder; }
 
 #release-editor .medium.tbl tr.track-artist-credit td table td {
     background: #f0f0f0;
-    padding: 2px;
 }
 
 #release-editor .medium.tbl tr.track-artist-credit td table td.icon {
